--- a/United Foodtruck.html
+++ b/United Foodtruck.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8" />
 	<title>United Foodtruck</title>
-	<link rel="stylesheet" href="United.css"/>
+	<link rel="stylesheet" type=“text/css” href="United.css"/>
 
 
 </head>
